<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/menu_toolbar_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_bell"
        android:orderInCategory="100"
        android:title="@string/menu_toolbar_notification"
        app:actionLayout="@layout/menu_toolbar_notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_toolbar_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/menu_toolbar_rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_toolbar_about"
        app:showAsAction="never" />
</menu>
