<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <include layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_10" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_smlarge">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_filter_playlist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_90"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/see_all_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:text="@string/SEE_ALL"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_mlarge"
                android:paddingLeft="@dimen/spacing_xmiddle"
                android:paddingRight="@dimen/spacing_xmiddle">

                <RadioGroup
                    android:id="@+id/rg_playlist_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <RadioGroup
                    android:id="@+id/rg_playlist_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_smlarge"
                android:text="@string/search_filter_tags"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_90"
                app:fontFamily="sans-serif-medium" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/tags_flex_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_mlarge"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                app:flexWrap="wrap"
                app:justifyContent="flex_start" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing_middle"
        android:paddingRight="@dimen/spacing_middle">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_reset"
            style="@style/Button.Primary.Borderless"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rect_grey"
            android:text="@string/RESET"
            android:textColor="@color/grey_60"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_apply"
            style="@style/Button.Primary.Borderless"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rect_grey"
            android:text="@string/APPLY"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
