<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_card_height_featured"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_small"
        app:cardBackgroundColor="@color/grey_10"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_featured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:overScrollMode="never" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/featured_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="2"
            android:layout_gravity="right"
            android:textDirection="rtl"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_section_recent"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_section_videos"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:text="@string/MORE"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_recent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_card_height"
        android:clipToPadding="false"
        android:paddingStart="@dimen/spacing_xmiddle"
        android:paddingEnd="@dimen/spacing_xmiddle"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_section_featured"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_section_playlist"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:text="@string/MORE"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:scrollbars="vertical"
        android:scrollingCache="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_section_tags"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_90"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/tags_flex_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_middle"
        android:paddingEnd="@dimen/spacing_middle"
        app:flexWrap="wrap"
        app:justifyContent="flex_start" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_mlarge" />

</LinearLayout>